30.jun (ws)
      - change semantic of breath symbol input: symbol is placed after the chord it
        was dropped on
      - much faster rendering of embedded images
      - make shift+dot (add staccato) work for rectangular selections
      - allow to attach chord names to measure repeat symbol
29.jun (ws)
      - preparations for hungary translation
      - fix breath position for staff != 0
      - fix boundingRect for breath symbol
      - experimental: shorten colliding ledger lines
      (db)
      - Fix preparations for hungary translation on Windows
      - Update handbooks
26.jun (ws)
      - apply staccato/trill only to notes not rests when using shortcuts
      - fix "Apply button needs two clicks in EditTextSTyle->Chordname"
25.jun (ws)
      - new score: do not create key signature for percussion staves
      - fix copy/paste of lyrics stanza
      - fix typo in part/staff property dialog: "stemless"
        now works again
24.jun (ws)
      - Scale hyphens in lyrics with text size.
      - Remove shortcut for zoomout in edit mode. It conflicts with
        Ctrl+- to enter a lyrics hyphen.
      - fix crash when changing volta properties
      - part and staff property changes are now undoable
23.jun (ws)
      - add "size" to font in chord description file
      (la)
      - fix: crash on save a copy
      - enable sorting of shortcuts in preferences
      (db)
      - Remove faulty "hemidemisemiquaver" text from en_GB translation
      - Fix lyric hyphen line to more closely approximate dimensions of
        an actual hyphen
      - Adjust size of preferences dialog for small screen sizes
22.jun (ws)
      - fix: removing staff causes crash if multi-staff bar
      - added symbol for sus4 to jazzfont
      - fix drag and drop percussion crash
      - again: make sure a valid duration is set in note entry mode
21.jun (ws)
      - allow notes above first line in drumset
      - fix crash when extending volta
      - fix multi selection